test_case/rust-lang_rust/10018_28258278.rs

//~^ ERROR your error message here
